Mon Dec  3 19:31:12 UTC 2007  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/Node_Daemon/Process_Log.cpp:

          Fixed build errors on Windows.

Mon Dec  3 19:26:08 UTC 2007  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/BDC/BDC_Task.cpp:
        * cuts/Component_Metric.cpp:
        * cuts/Component_Registry.cpp:
        * cuts/Log_T.cpp:
        * cuts/System_Metric.cpp:
        * cuts/Time_Measurement.cpp:
        * cuts/Timestamp_Metric.h:
        * cuts/Timestamp_Metric.inl:
        * cuts/XML_Metrics_Writer.cpp:
        * utils/Node_Daemon/Node_Daemon_i.cpp:
        * utils/Node_Daemon/Process_Log.h:
        * utils/Node_Daemon/Process_Log.cpp:

          Fixed build errors and warnings on Linux.

Mon Dec  3 19:20:41 UTC 2007  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/be/BE.mpc:
        * cuts/be/BE_Env_Visitor_T.h:
        * cuts/be/BE_Execution_Visitor_T.h:
        * cuts/be/BE_Generators_T.h:
        * cuts/be/BE_Impl_Generator_T.cpp:

          Added support to generating basic assembly information from the
          PICML model.

        * cuts/be/TIOA/TIOA_Generators.h:
        * cuts/be/TIOA/TIOA_Generators.cpp:

          The TIOA backend now can generate basic assembly infomration
          about the instances declared and the connections between each
          instance.

Tue Nov 27 22:26:40 UTC 2007  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/BDC/Benchmark_Data_Collector.idl:
        * cuts/BDC/Benchmark_Data_Collector.mpc:
        * cuts/BDC/service.idl:

          Started fleshing out the remoting service manager/interface
          provided by the BDC.

Tue Nov 27 21:54:43 UTC 2007  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/BDC/BDC_Service_Manager.h:
        * cuts/BDC/BDC_Service_Manager.inl:
        * cuts/BDC/BDC_Service_Manager.cpp:
        * cuts/BDC/Benchmark_Data_Collector.mpc:
        * cuts/BDC/Benchmark_Data_Collector_exec_i.h: