@@ -1,0 +1,21 @@
+// $Id$
+
+//
+// CUTS_BE_Assembly_Generator_T
+//
+template <typename T>
+CUTS_INLINE
+CUTS_BE_Assembly_Generator_T <T>::CUTS_BE_Assembly_Generator_T (void)
+{
+
+}
+
+//
+// ~CUTS_BE_Assembly_Generator_T
+//
+template <typename T>
+CUTS_INLINE
+CUTS_BE_Assembly_Generator_T <T>::~CUTS_BE_Assembly_Generator_T (void)
+{
+
+}
